--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <title>MAD9013 Final</title>
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <script src="//use.edgefonts.net/port-lligat-sans;port-lligat-slab;prosto-one;quattrocento-sans.js"></script> ></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="image">
+    </div>
+    <div class="header">
+        <h1>Sports Site</h1>
+    </div>
+    <div class="para-1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
+    <div class="para-2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
+    <div class="para-1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
+    <div class="para-2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
+    <div class="footer">
+    </div>
 </body>
 </html>
