--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>MAD9013 Final</title>
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <script src="//use.edgefonts.net/port-lligat-sans;port-lligat-slab;prosto-one;quattrocento-sans.js"></script> ></script>
+    <script src="//use.edgefonts.net/port-lligat-sans;port-lligat-slab;prosto-one;quattrocento-sans.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
