--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MAD9013 Final</title>
     <!-- Latest compiled and minified Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
@@ -8,16 +9,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="image">
-    </div>
-    <div class="header">
-        <h1>Sports Site</h1>
-    </div>
-    <div class="para-1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-    <div class="para-2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-    <div class="para-1"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-    <div class="para-2"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p></div>
-    <div class="footer">
+    <div class="container">
+        <img src="img/index.jpg">
     </div>
 </body>
 </html>
