MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Final project for MAD9013">
     <meta name="author" content="Vladimir Tonkonogov">
 
-    <title>Ottawa's Cableway Racing League</title>
+    <title>World's Cableway Racing League</title>
 
     <!-- Bootstrap CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div class="brand">Ottawa's Cableway Racing League</div>
+    <div class="brand">World's Cableway Racing League</div>
     <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
 
     <!-- Navigation -->
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand tert" href="index.html">Cableway Racing League</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -54,7 +54,7 @@
                         <a href="locations.html">Locations</a>
                     </li>
                     <li>
-                        <a href="signup.html">Signup</a>
+                        <a href="signup.html">Sign Up</a>
                     </li>
                 </ul>
             </div>
