MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                         </a>
                     </div>
                     <h2 class="brand-before tert">
-                        <small>Welcome to</small>
+                        <small>Simply the Best</small>
                     </h2>
-                    <h1 class="brand-name">Ottawa's Cableway Racing League Homepage</h1>
+                    <h1 class="brand-name">World's Cableway Racing League: Canadian Division</h1>
                     <hr class="tagline-divider">
                     <h2 class="tert">
                         <small>Competion Year
