MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -24,8 +24,10 @@
 
 <body>
 
-    <div class="brand">World's Cableway Racing League</div>
-    <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
+    <div class="row header-nonbs locations">
+        <div class="brand">World's Cableway Racing League</div>
+        <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
+    </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
