--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 </head>
 
 <body>
-
-    <div class="brand">World's Cableway Racing League</div>
-    <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
+    
+    <div class="row header-nonbs home">
+        <div class="brand">World's Cableway Racing League</div>
+        <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
+    </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -68,6 +70,16 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
+                    <h2 class="brand-before tert">
+                        <small>Simply the Best</small>
+                    </h2>
+                    <h1 class="brand-name">World's Cableway Racing League: Canadian Division</h1>
+                    <hr class="tagline-divider">
+                    <h2 class="tert">
+                        <small>Competion Year
+                            <strong>77</strong>
+                        </small>
+                    </h2>
                     <div id="carousel-example-generic" class="carousel slide">
                         <!-- Indicators -->
                         <ol class="carousel-indicators hidden-xs">
@@ -97,16 +109,6 @@
                             <span class="icon-next"></span>
                         </a>
                     </div>
-                    <h2 class="brand-before tert">
-                        <small>Simply the Best</small>
-                    </h2>
-                    <h1 class="brand-name">World's Cableway Racing League: Canadian Division</h1>
-                    <hr class="tagline-divider">
-                    <h2 class="tert">
-                        <small>Competion Year
-                            <strong>77</strong>
-                        </small>
-                    </h2>
                 </div>
             </div>
         </div>
