MAD9013 Final - Bootstrap Sports Site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     <div class="row header-nonbs home">
         <div class="brand">World's Cableway Racing League</div>
-        <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
+        <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
 
     <!-- Navigation -->
