--- a/pages/locations.html
+++ b/pages/locations.html
@@ -26,7 +26,7 @@
 
     <div class="row header-nonbs locations">
         <div class="brand">World's Cableway Racing League</div>
-        <div class="address-bar">173 Carling Street | Ottawa, ON K1S2E1 | 613.111.2233</div>
+        <div class="address-bar">17 Carling Avenue | Ottawa, ON K1A 0E9 | 613.111.2233</div>
     </div>
 
     <!-- Navigation -->
@@ -66,54 +66,50 @@
     </nav>
 
     <div class="container">
-
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
-                        <strong>blog</strong>
+                    <h2 class="intro-text text-center">The
+                        <strong>Primary Hub</strong>
                     </h2>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="../img/slide-1.jpg" alt="">
-                    <h2>Post Title
-                        <br>
-                        <small>October 13, 2013</small>
+                <div class="col-md-8">
+                   <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?q=17+Carling+Ave,+Ottawa,+ON+K1S+2E1/@45.4011181,-75.6998176,17z&zoom=15&key=AIzaSyDP68CXSK9TynSN4n_Moo7PPakL8SQM0xk"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <p>Phone:
+                        <strong>613.111.2233</strong>
+                    </p>
+                    <p>Email:
+                        <strong><a href="mailto:name@example.com">wcrl-canada@wcrl.com</a></strong>
+                    </p>
+                    <p>Address:
+                        <strong>17 Carling Avenue
+                            <br>Ottawa, ON K1A 0E9</strong>
+                    </p>
+                </div>
+                <div class="clearfix"></div>
+            </div>
+        </div>
+        <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">The
+                        <strong>Training Locations</strong>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="../img/slide-2.jpg" alt="">
-                    <h2>Post Title
-                        <br>
-                        <small>October 13, 2013</small>
-                    </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
-                    <hr>
-                </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="../img/slide-3.jpg" alt="">
-                    <h2>Post Title
-                        <br>
-                        <small>October 13, 2013</small>
-                    </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
-                    <hr>
-                </div>
-                <div class="col-lg-12 text-center">
-                    <ul class="pager">
-                        <li class="previous"><a href="#">&larr; Older</a>
-                        </li>
-                        <li class="next"><a href="#">Newer &rarr;</a>
-                        </li>
-                    </ul>
-                </div>
+        <div class="row">
+            <div class="box">
+                <ul id="center" class="list-group">
+        <li class="list-group-item col-lg-4"><img id="map-1" alt="Google Maps" class="img-responsive"/><h5>Algonquin Field Complex</h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-2"/><h5>Nepean Creek Soccer Field</h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-3"/><h5>Hornets Nest Soccer Park</h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-4"/><h5>Ben Franklin Park</h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-5"/><h5>Fawn Meadows</h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-6"/><h5>Shefford Park</h5></li>
+    </ul>
             </div>
         </div>
 
