MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -103,12 +103,12 @@
         <div class="row">
             <div class="box">
                 <ul id="center" class="list-group">
-        <li class="list-group-item col-lg-4"><img id="map-1" alt="Google Maps" class="img-responsive"/><h5>Algonquin Field Complex</h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-2"/><h5>Nepean Creek Soccer Field</h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-3"/><h5>Hornets Nest Soccer Park</h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-4"/><h5>Ben Franklin Park</h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-5"/><h5>Fawn Meadows</h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-6"/><h5>Shefford Park</h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-1" alt="Google Maps" class="img-responsive"/><h5></h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-2"/><h5></h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-3"/><h5></h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-4"/><h5></h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-5"/><h5></h5></li>
+        <li class="list-group-item col-lg-4"><img id="map-6"/><h5></h5></li>
     </ul>
             </div>
         </div>
