--- a/pages/standings.html
+++ b/pages/standings.html
@@ -115,7 +115,7 @@
                 <td>1</td>
                 <td>9</td>
                 <td>4</td>
-                <td>36</td>
+                <td>27.4</td>
             </tr>
             <tr>
                 <th>Level 3</th>
@@ -123,7 +123,7 @@
                 <td>29</td>
                 <td>12</td>
                 <td>1</td>
-                <td>30</td>
+                <td>14.6</td>
             </tr>
             <tr>
                 <th>Level 2</th>
@@ -131,15 +131,15 @@
                 <td>26</td>
                 <td>15</td>
                 <td>2</td>
-                <td>28</td>
+                <td>21.2</td>
             </tr>
             <tr>
                 <th>Level 1</th>
-                <td>RELENTLESS</td>
+                <td>RELENTLESS 7</td>
                 <td>22</td>
                 <td>19</td>
                 <td>1</td>
-                <td>23</td>
+                <td>17.9</td>
             </tr>
             <tr>
                 <th>Level 0</th>
@@ -147,7 +147,7 @@
                 <td>15</td>
                 <td>19</td>
                 <td>5</td>
-                <td>20</td>
+                <td>23.5</td>
             </tr>
         </tbody>
     </table>
@@ -348,21 +348,21 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/John.jpg" alt="John Lucoth">
-                    <h3 class="tert">John Lucoth<br>
+                    <h3>John Lucoth<br>
                         <small>1st Cabin Racer</small>
                     </h3>
                     <p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Mark.jpg" alt="Mark Sethengore">
-                    <h3 class="tert">Mark Sethengore<br>
+                    <h3>Mark Sethengore<br>
                         <small>2nd Cabin Racer</small>
                     </h3>
                     <p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="../img/Bella.jpg" alt="Bella Dale">
-                    <h3 class="tert">Bella Dale<br>
+                    <h3>Bella Dale<br>
                         <small>3rd Cabin Racer</small>
                     </h3>
                     <p><small>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</small></p>
