--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
-                    <h2 class="brand-before tert">
+                    <h2 class="brand-before">
                         <small>Simply the Best</small>
                     </h2>
                     <h1 class="brand-name">World's Cableway Racing League: Canadian Division</h1>
                     <hr class="tagline-divider">
-                    <h2 class="tert">
+                    <h2>
                         <small>Competion Year
                             <strong>77</strong>
                         </small>
