MAD9013 Final - Bootstrap Sports Site

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -77,21 +77,21 @@
                     </h2>
                     <hr>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
-                    <div class="row">
-                        <div class="col-lg-4 tert">
-                            <h2 class="tert"><small>Plan A</small></h2>
-                            <h3 class="tert">Golden Decade</h3>
-                            <h2 class="tert"><small>CAD 29,999.99</small></h2>
+                    <div class="row text-center">
+                        <div class="col-lg-4">
+                            <h2><small>Plan A</small></h2>
+                            <h3>Golden Decade</h3>
+                            <h2><small>CAD 29,999.99</small></h2>
                         </div>
                         <div class="col-lg-4">
-                            <h2 class="tert"><small>Plan B</small></h2>
-                            <h3 class="tert">30 Year Long Adventure</h3>
-                            <h2 class="tert"><small>CAD 49,999.99</small></h2>
+                            <h2><small>Plan B</small></h2>
+                            <h3>30 Year Long Adventure</h3>
+                            <h2><small>CAD 49,999.99</small></h2>
                         </div>
                         <div class="col-lg-4">
-                            <h2 class="tert"><small>Plan C</small></h2>
-                            <h3 class="tert">Lifetime Valour</h3>
-                            <h2 class="tert"><small>CAD 99,999.99</small></h2>
+                            <h2><small>Plan C</small></h2>
+                            <h3>Lifetime Valour</h3>
+                            <h2><small>CAD 99,999.99</small></h2>
                         </div>
                     </div>
                     <hr>
