--- a/pages/standings.html
+++ b/pages/standings.html
@@ -234,7 +234,7 @@
             </tr>
         </tbody>
     </table>
-    <table class="table">
+    <table class="table text-center">
         <thead>
             <hr>
             <h2 class="intro-text text-center">
