MAD9013 Final - Bootstrap Sports Site

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -83,7 +83,7 @@
                         <strong>613.111.2233</strong>
                     </p>
                     <p>Email:
-                        <strong><a href="mailto:name@example.com">wcrl-canada@wcrl.com</a></strong>
+                        <strong><a href="wcrl-canada@wcrl.com">wcrl-canada@wcrl.com</a></strong>
                     </p>
                     <p>Address:
                         <strong>17 Carling Avenue
@@ -103,11 +103,12 @@
         <div class="row">
             <div class="box">
                 <ul id="center" class="list-group">
-        <li class="list-group-item col-lg-4"><img id="map-1" alt="Google Maps" class="img-responsive"/><h5></h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-2"/><h5></h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-3"/><h5></h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-4"/><h5></h5></li>
-        <li class="list-group-item col-lg-4"><img id="map-5"/><h5></h5></li>
+        <li class="list-group-item col-sm-6 col-md-4"><img src="https://maps.googleapis.com/maps/api/staticmap?center=Carling+Ave,+Ottawa,+ON+K1S+2E1&zoom=14&size=400x250&maptype=roadmap
+&markers=color:green" style="height: 100%; width: 100%;" alt="Google Maps" class="img-responsive"/><h5></h5></li>
+        <li class="list-group-item col-sm-6 col-md-4"><img src="map-2"/><h5></h5></li>
+        <li class="list-group-item col-sm-6 col-md-4"><img id="map-3"/><h5></h5></li>
+        <li class="list-group-item col-sm-6 col-md-4"><img id="map-4"/><h5></h5></li>
+        <li class="list-group-item col-sm-6 col-md-4"><img id="map-5"/><h5></h5></li>
         <li class="list-group-item col-lg-4"><img id="map-6"/><h5></h5></li>
     </ul>
             </div>
