--- a/pages/signup.html
+++ b/pages/signup.html
@@ -41,7 +41,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-brand tert" href="index.html">Cableway Racing League</a>
+                <a class="navbar-brand" href="index.html">Cableway Racing League</a>
             </div>
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -78,17 +78,17 @@
                     <hr>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, vitae, distinctio, possimus repudiandae cupiditate ipsum excepturi dicta neque eaque voluptates tempora veniam esse earum sapiente optio deleniti consequuntur eos voluptatem.</p>
                     <div class="row text-center">
-                        <div class="col-lg-4">
+                        <div class="col-md-4 col-lg-4">
                             <h2><small>Plan A</small></h2>
                             <h3>Golden Decade</h3>
                             <h2><small>CAD 29,999.99</small></h2>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-md-4 col-lg-4">
                             <h2><small>Plan B</small></h2>
-                            <h3>30 Year Long Adventure</h3>
+                            <h3>30-Year Long Adventure</h3>
                             <h2><small>CAD 49,999.99</small></h2>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-md-4 col-lg-4">
                             <h2><small>Plan C</small></h2>
                             <h3>Lifetime Valour</h3>
                             <h2><small>CAD 99,999.99</small></h2>
@@ -101,21 +101,21 @@
                     <form role="form">
                         <hr>
                         <div class="row">
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-md-6 col-lg-4">
                                 <label>Full Name</label>
                                 <input type="text" class="form-control" placeholder="enter your full name">
                             </div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-md-6 col-lg-4">
                                 <label>Address</label>
                                 <input type="email" class="form-control" placeholder="enter your current address">
                             </div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-md-6 col-lg-4">
                                 <label>City</label>
                                 <input type="tel" class="form-control" placeholder="enter the name of your city">
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-lg-2">
+                            <div class="form-group col-md-3 col-lg-2">
                                 <label>Province</label>
                                 <select class="form-control" name="province" id="province">
                                     <option>Select below</option>
@@ -134,15 +134,15 @@
                                     <option value="13">YT</option>
                                 </select>
                             </div>
-                            <div class="form-group col-lg-2">
+                            <div class="form-group col-md-3 col-lg-2">
                                 <label>Postal Code</label>
                                 <input type="email" class="form-control" placeholder="enter postal code">
                             </div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-md-3 col-lg-4">
                                 <label>Phone Number</label>
                                 <input type="tel" class="form-control" placeholder="613 111 2233">
                             </div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-md-3 col-lg-4">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="enter valid email">
                             </div>
@@ -176,8 +176,7 @@
                         </div>
                         <hr>
                         <div class="row">
-                            <div class="form-group col-lg-4"></div>
-                            <div class="form-group col-lg-4">
+                            <div class="form-group col-lg-4 col-lg-offset-4">
                                 <label>Please select one of the option plans below:</label>
                                 <select class="form-control" name="province" id="province">
                                     <option>Choose from 3 available plans</option>
@@ -186,7 +185,6 @@
                                     <option value="03">Plan C: Lifetime Valour</option>
                                 </select>
                             </div>
-                            <div class="form-group col-lg-4"></div>
                             <div class="clearfix"></div>
                             <div class="form-group col-lg-12">
                                 <label>Signup Message</label>
