MAD9013 Final - Bootstrap Sports Site

--- a/pages/standings.html
+++ b/pages/standings.html
@@ -68,7 +68,7 @@
     <div class="container">
         <div class="row">
             <div class="box">
-                <table class="table">
+                <table class="table table-hover text-center">
         <thead>
             <hr>
             <h2 class="intro-text text-center">
@@ -151,7 +151,7 @@
             </tr>
         </tbody>
     </table>
-                <table class="table">
+                 <table class="table table-hover text-center">
         <thead>
             <hr>
             <h2 class="intro-text text-center">
@@ -234,7 +234,7 @@
             </tr>
         </tbody>
     </table>
-    <table class="table text-center">
+     <table class="table table-hover text-center">
         <thead>
             <hr>
             <h2 class="intro-text text-center">
