MAD9013 Final - Bootstrap Sports Site

--- a/pages/standings.html
+++ b/pages/standings.html
@@ -152,7 +152,7 @@
         </tbody>
     </table>
                  <table class="table table-hover text-center">
-        <thead>
+        <thead class="text-center">
             <hr>
             <h2 class="intro-text text-center">
                         <strong>Domestic Competitions</strong>
@@ -235,7 +235,7 @@
         </tbody>
     </table>
      <table class="table table-hover text-center">
-        <thead>
+        <thead class="text-center">
             <hr>
             <h2 class="intro-text text-center">
                         <strong>International Championships</strong>
