MAD9013 Final - Bootstrap Sports Site

--- a/pages/standings.html
+++ b/pages/standings.html
@@ -152,13 +152,13 @@
         </tbody>
     </table>
                  <table class="table table-hover text-center">
-        <thead class="text-center">
+        <thead>
             <hr>
             <h2 class="intro-text text-center">
                         <strong>Domestic Competitions</strong>
                     </h2>
             <hr>
-            <tr>
+            <tr class="text-center">
                 <th>#</th>
                 <th>GAME</th>
                 <th>PLACE</th>
@@ -235,7 +235,7 @@
         </tbody>
     </table>
      <table class="table table-hover text-center">
-        <thead class="text-center">
+        <thead>
             <hr>
             <h2 class="intro-text text-center">
                         <strong>International Championships</strong>
