MAD9013 Final - Bootstrap Sports Site

--- a/pages/standings.html
+++ b/pages/standings.html
@@ -67,7 +67,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="box">
+            <div class="box text-center">
                 <table class="table table-hover text-center">
         <thead>
             <hr>
@@ -158,7 +158,7 @@
                         <strong>Domestic Competitions</strong>
                     </h2>
             <hr>
-            <tr class="text-center">
+            <tr>
                 <th>#</th>
                 <th>GAME</th>
                 <th>PLACE</th>
